Added meta description to every page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Helvetica', sans-serif;
+    src: url('/fonts/Helvetica.ttf');
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Helvetica', sans-serif;
+    src: url('/fonts/Helvetica-Bold.ttf');
+    font-weight: 700;
+    font-display: swap;
+    font-style: normal;
+  }
+}
